[tool.poetry]
name = "ipfs-hitter"
version = "0.1.0"
description = ""
authors = ["kulgg <75735874+kulgg@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ipfs_hitter"}]

[tool.poetry.scripts]
ih = "ipfs_hitter.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.4.0"
exitstatus = "^2.2.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
